--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <style>
             .horn-bg {
                 color: #fff;
@@ -22,15 +23,26 @@
                 100%	        { background-color: #fff;}
             }
 
-
-            img.slack {
+            .wrapper {
                 margin-top: 15%;
             }
+
+            .msg {
+                font-family: Roboto;
+                font-size: 5rem;
+                background: #fff;
+                color: #000;
+                padding: .2em;
+            }
+
         </style>
     </head>
     <body>
         <div class="horn-bg">
-            <img class="slack" src="https://assets.brandfolder.com/pljt3c-dcwb20-27ztzl/v/2995546/view@2x.png?v=1592396074" />
+            <div class="wrapper">
+                <img class="slack" src="https://assets.brandfolder.com/pljt3c-dcwb20-27ztzl/v/2995546/view@2x.png?v=1592396074" />
+                <p class="msg">Please Check Slack!</p>
+            </div>
         </div>
     </body>
 </html>
